@@ -34,6 +34,7 @@
 ##
 
 - Fixed keys extraction in luks2hashcat - now extracts all active keys
+- Prevent Hashcat from hanging by checking during startup that the output file is a named pipe
 
 ##
 ## Technical
